# Apollo

./: README.md  八股文.txt
MyApollo/planning/: CMakeLists.txt
MyApollo/planning/include/: PathPlanQPProblem.h  QPProblem.h  STPlan.h  VSPlan.h  planninglog.h
MyApollo/planning/src/: PathPlanQPProblem.cpp  STPlan.cpp  SpeedPlanQPProblem.cpp  VSPlan.cpp  planninglog.cpp
MyApollo/reference/include/: Reference.h
MyApollo/reference/src/: RefPoint.cpp  test.cpp
common/math/: Vec2d.h  point.cpp  point.h  segment.h
planning/: CMakeLists.txt
planning/include/: SpeedPlanQPProblem.h
planning/result/: log.txt
planning/src/: QPProblem.cpp  SpeedPlanQPProblem.cpp
reference/: CMakeLists.txt
reference/include/: VehiclePoint.h  VehicleTrajectory.h  trajectory_projection.h
reference/src/: RefPoint.cpp  Reference.cpp  VehiclePoint.cpp  VehicleTrajectory.cpp  test.cpp  trajectory_projection.cpp
reference_swig/py/: ref.py
reference_swig/reference/: CMakeLists.txt
reference_swig/reference/include/: RefPoint.h  Reference.h
reference_swig/swig/: CMakeLists.txt
reference_swig/swig/src/: VehicleTrajectory.h  interface.cpp  interface.h  interface.i  trajectory_projection.h
